--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -42,9 +42,17 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = waybar
-# cliphist
+# Clipboard management.
+# NOTE: To paste into the terminal you have to use CTRL+SHIFT+V instead of CTRL+V.
+#
+# Monitor the wayland clipboard. When something is copied into the clipboard, push it into cliphist's history.
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+# Bind SUPER+v to bring up a wofi chooser allowing you to copy some text from cliphist's history to the system clipboard.
+# NOTE: This does **NOT** paste the text. You need to follow this up with CTRL+SHIFT+V to paste it.
+#       This simply allows you to re-copy something in your copy history so it's available to be pasted.
+bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = SUPER, V, sendshortcut, CTRL+SHIFT, V,
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -229,7 +237,7 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+# bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
