Created the paste_from_history.sh script that allows the user to paste from the clipboard history. Bound this script to SUPER+v.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -42,17 +42,16 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = waybar
+
 # Clipboard management.
-# NOTE: To paste into the terminal you have to use CTRL+SHIFT+V instead of CTRL+V.
+# NOTE: To paste into the terminal you have to use CTRL+SHIFT+v instead of CTRL+v.
+#       CTRL+v only works in GUI applications.
 #
-# Monitor the wayland clipboard. When something is copied into the clipboard, push it into cliphist's history.
+# Monitor the system clipboard. When something is copied into the system clipboard, push it into cliphist's history.
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-# Bind SUPER+v to bring up a wofi chooser allowing you to copy some text from cliphist's history to the system clipboard.
-# NOTE: This does **NOT** paste the text. You need to follow this up with CTRL+SHIFT+V to paste it.
-#       This simply allows you to re-copy something in your copy history so it's available to be pasted.
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
-bind = SUPER, V, sendshortcut, CTRL+SHIFT, V,
+# Bind SUPER+v to bring up a wofi chooser dialog allowing you to choose the text to paste from the clipboard history.
+bind = SUPER, v, exec, ~/.config/hypr/scripts/paste_from_history.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
