--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -25,8 +25,8 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
-$fileManager = dolphin
+$terminal = ghostty
+$fileManager = nautilus
 $menu = wofi --show drun
 
 
