--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -301,6 +301,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bind = ALT, PRINT, exec, hyprshot -m window
 bind = SHIFT, PRINT, exec, hyprshot -m region
 
+bind = $mainMod, L, exec, hyprlock
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
