Initial addition of hypridle

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -43,6 +43,7 @@ $menu = wofi --show drun
 
 exec-once = waybar
 exec-once = swaync
+exec-once = hypridle
 
 # Clipboard management.
 # NOTE: To paste into the terminal you have to use CTRL+SHIFT+v instead of CTRL+v.
