--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/backgrounds/Fantasy-Autumn.png.jpeg
-wallpaper = , ~/.config/backgrounds/Fantasy-Autumn.png.jpeg
+preload = ~/.config/backgrounds/Fantasy-Autumn.png
+wallpaper = , ~/.config/backgrounds/Fantasy-Autumn.png
