Removed XWayland patches found on wiki

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -321,14 +321,14 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-# change monitor to high resolution, the last argument is the scale factor
-monitor = , highres, auto, 1.5
-
-# unscale XWayland
-xwayland {
-  force_zero_scaling = true
-}
-
-# toolkit-specific scale
-env = GDK_SCALE,2
-env = XCURSOR_SIZE,16
+## change monitor to high resolution, the last argument is the scale factor
+#monitor = , highres, auto, 1.5
+#
+## unscale XWayland
+#xwayland {
+#  force_zero_scaling = true
+#}
+#
+## toolkit-specific scale
+#env = GDK_SCALE,2
+#env = XCURSOR_SIZE,16
