Mapped CAPSLOCK to CTRL. Changed lock screen keybind to not conflict with moving focus to right window.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -212,6 +212,8 @@ input {
     touchpad {
         natural_scroll = false
     }
+
+    kb_options = ctrl:nocaps
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
@@ -303,7 +305,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bind = ALT, PRINT, exec, hyprshot -m window
 bind = SHIFT, PRINT, exec, hyprshot -m region
 
-bind = $mainMod, L, exec, hyprlock
+bind = SHIFT+$mainMod, L, exec, hyprlock
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
