--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,10 +1,6 @@
 theme = catppuccin-mocha
 
-font-family = Hack Nerd Font Mono Regular
-font-family-bold = Hack Nerd Font Mono Bold
-font-family-italic = Hack Nerd Font Mono Italic
-font-family-bold-italic = Hack Nerd Font Mono Bold Italic
+font-family = "Hack Nerd Font Mono"
+font-size = 13
 
-font-size = 14
-
-background-opacity = 0.9
+background-opacity = 0.8
