--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,6 +16,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+monitor=eDP-1,preferred,auto,1.0
 
 
 ###################
@@ -322,15 +323,3 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-## change monitor to high resolution, the last argument is the scale factor
-#monitor = , highres, auto, 1.5
-#
-## unscale XWayland
-#xwayland {
-#  force_zero_scaling = true
-#}
-#
-## toolkit-specific scale
-#env = GDK_SCALE,2
-#env = XCURSOR_SIZE,16
