Fixed typo in wallpaper path in hyprlock

--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/backgrounds/Fantasy-Autumn.png.png
+    path = ~/.config/backgrounds/Fantasy-Autumn.png
     blur_passes = 2
     color = $base
 }
