Fixed errors: '=' separator not used.

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family = "Hack Nerd Font Mono"
-font_size = 14
+font_family "Hack Nerd Font Mono"
+font_size 14
 
-background_opacity = 0.8
+background_opacity 0.8
 
 # Catppuccin mocha theme.
 
